Model/OCL/Compiler/OCLSyntaxParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.3.1.7705
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.3.1.7705 ..\\..\\Model\\OCL\\Grammar\\OCLSyntax.g3 2011-11-10 22:35:02

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162


using System.Collections.Generic;
using Antlr.Runtime;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace Exolutio.Model.OCL.Compiler
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.3.1.7705")]
[System.CLSCompliant(false)]
public partial class OCLSyntaxParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ACC", "ARGS", "BODY", "CALL", "CALLARGS", "CLASSIFIERCONDITION", "CLASSIFIERHEAD", "COLLECTIONLITERAL", "COLLECTIONTYPE", "COLLPART", "COLLPARTRANGE", "COLLTYPE", "CONDITION", "Char", "DECL", "DEF", "DERIVATE", "EscapeSequence", "ExponentPart", "Hex", "IF", "INDEX", "INFIX", "INIT", "INV", "ITERATE", "IntegerLiteralExp", "InvalidLiteralExp", "LET", "LINE_COMMENT", "MESSAGE", "NESTED_ML_COMMENT", "NameChar", "NameStartChar", "NullLiteralExp", "Num", "OPERATION", "OPERATIONCONDITION", "OPERATIONHEAD", "PATH", "POST", "PRE", "PRIMITIVELITERAL", "PROPERTYCONDITION", "PROPERTYHEAD", "RealLiteralExp", "SimpleName", "StringChar", "StringLiteralExp", "TUPLELITERAL", "TYPE", "UNARY", "UnlimitedNaturalLiteralExp", "VARDECL", "WS", "WhiteSpaceChar", "'('", "')'", "'+'", "','", "'-'", "'->'", "'.'", "'..'", "'/'", "':'", "'::'", "';'", "'<'", "'<='", "'<>'", "'='", "'>'", "'>='", "'?'", "'@'", "'Bag'", "'Boolean'", "'Collection'", "'Integer'", "'OclAny'", "'OclInvalid'", "'OclMessage'", "'OclVoid'", "'OrderedSet'", "'Real'", "'Sequence'", "'Set'", "'String'", "'Tuple'", "'UnlimitedNatural'", "'['", "']'", "'^'", "'^^'", "'and'", "'body'", "'context'", "'def'", "'derivate'", "'else'", "'endif'", "'false'", "'if'", "'implies'", "'in'", "'init'", "'inv'", "'iterate'", "'let'", "'not'", "'or'", "'post'", "'pre'", "'static'", "'then'", "'true'", "'xor'", "'{'", "'|'", "'}'"
	};
	public const int EOF=-1;
	public const int ACC=4;
	public const int ARGS=5;
	public const int BODY=6;
	public const int CALL=7;
	public const int CALLARGS=8;
	public const int CLASSIFIERCONDITION=9;
	public const int CLASSIFIERHEAD=10;
	public const int COLLECTIONLITERAL=11;
	public const int COLLECTIONTYPE=12;
	public const int COLLPART=13;
	public const int COLLPARTRANGE=14;
	public const int COLLTYPE=15;
	public const int CONDITION=16;
	public const int Char=17;
	public const int DECL=18;
	public const int DEF=19;
	public const int DERIVATE=20;
	public const int EscapeSequence=21;
	public const int ExponentPart=22;
	public const int Hex=23;
	public const int IF=24;
	public const int INDEX=25;
	public const int INFIX=26;
	public const int INIT=27;
	public const int INV=28;
	public const int ITERATE=29;
	public const int IntegerLiteralExp=30;
	public const int InvalidLiteralExp=31;
	public const int LET=32;
	public const int LINE_COMMENT=33;
	public const int MESSAGE=34;
	public const int NESTED_ML_COMMENT=35;
	public const int NameChar=36;
	public const int NameStartChar=37;
	public const int NullLiteralExp=38;
	public const int Num=39;
	public const int OPERATION=40;
	public const int OPERATIONCONDITION=41;
	public const int OPERATIONHEAD=42;
	public const int PATH=43;
	public const int POST=44;
	public const int PRE=45;
	public const int PRIMITIVELITERAL=46;
	public const int PROPERTYCONDITION=47;
	public const int PROPERTYHEAD=48;
	public const int RealLiteralExp=49;
	public const int SimpleName=50;
	public const int StringChar=51;
	public const int StringLiteralExp=52;
	public const int TUPLELITERAL=53;
	public const int TYPE=54;
	public const int UNARY=55;
	public const int UnlimitedNaturalLiteralExp=56;
	public const int VARDECL=57;
	public const int WS=58;
	public const int WhiteSpaceChar=59;
	public const int T__60=60;
	public const int T__61=61;
	public const int T__62=62;
	public const int T__63=63;
	public const int T__64=64;
	public const int T__65=65;
	public const int T__66=66;
	public const int T__67=67;
	public const int T__68=68;
	public const int T__69=69;
	public const int T__70=70;
	public const int T__71=71;
	public const int T__72=72;
	public const int T__73=73;
	public const int T__74=74;
	public const int T__75=75;
	public const int T__76=76;
	public const int T__77=77;
	public const int T__78=78;
	public const int T__79=79;
	public const int T__80=80;
	public const int T__81=81;
	public const int T__82=82;
	public const int T__83=83;
	public const int T__84=84;
	public const int T__85=85;
	public const int T__86=86;
	public const int T__87=87;
	public const int T__88=88;
	public const int T__89=89;
	public const int T__90=90;
	public const int T__91=91;
	public const int T__92=92;
	public const int T__93=93;
	public const int T__94=94;
	public const int T__95=95;
	public const int T__96=96;
	public const int T__97=97;
	public const int T__98=98;
	public const int T__99=99;
	public const int T__100=100;
	public const int T__101=101;
	public const int T__102=102;
	public const int T__103=103;
	public const int T__104=104;
	public const int T__105=105;
	public const int T__106=106;
	public const int T__107=107;
	public const int T__108=108;
	public const int T__109=109;
	public const int T__110=110;
	public const int T__111=111;
	public const int T__112=112;
	public const int T__113=113;
	public const int T__114=114;
	public const int T__115=115;
	public const int T__116=116;
	public const int T__117=117;
	public const int T__118=118;
	public const int T__119=119;
	public const int T__120=120;
	public const int T__121=121;
	public const int T__122=122;
	public const int T__123=123;
	public const int T__124=124;

	// delegates
	// delegators

	public OCLSyntaxParser( ITokenStream input )
		: this( input, new RecognizerSharedState() )
	{
	}
	public OCLSyntaxParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);

		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();


		OnCreated();
	}
		
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return OCLSyntaxParser.tokenNames; } }
	public override string GrammarFileName { get { return "..\\..\\Model\\OCL\\Grammar\\OCLSyntax.g3"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	public sealed partial class contextDeclarationList_return : ParserRuleReturnScope<CommonToken>, IAstRuleReturnScope<object>, IAstRuleReturnScope
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public contextDeclarationList_return(OCLSyntaxParser grammar) {OnCreated(grammar);}
		partial void OnCreated(OCLSyntaxParser grammar);
	}

	partial void EnterRule_contextDeclarationList();
	partial void LeaveRule_contextDeclarationList();

	// $ANTLR start "contextDeclarationList"
	// ..\\..\\Model\\OCL\\Grammar\\OCLSyntax.g3:23:1: public contextDeclarationList : ( contextDeclaration )* -> ^( CONDITION ( contextDeclaration )* ) ;
	[GrammarRule("contextDeclarationList")]
	public OCLSyntaxParser.contextDeclarationList_return contextDeclarationList()
	{
		EnterRule_contextDeclarationList();
		EnterRule("contextDeclarationList", 1);
		TraceIn("contextDeclarationList", 1);
		OCLSyntaxParser.contextDeclarationList_return retval = new OCLSyntaxParser.contextDeclarationList_return(this);
		retval.Start = (CommonToken)input.LT(1);

		object root_0 = default(object);

		OCLSyntaxParser.contextDeclaration_return contextDeclaration1 = default(OCLSyntaxParser.contextDeclaration_return);

		RewriteRuleSubtreeStream stream_contextDeclaration=new RewriteRuleSubtreeStream(adaptor,"rule contextDeclaration");
		try { DebugEnterRule(GrammarFileName, "contextDeclarationList");
		DebugLocation(23, 1);
		try
		{
			// ..\\..\\Model\\OCL\\Grammar\\OCLSyntax.g3:24:2: ( ( contextDeclaration )* -> ^( CONDITION ( contextDeclaration )* ) )
			DebugEnterAlt(1);
			// ..\\..\\Model\\OCL\\Grammar\\OCLSyntax.g3:24:3: ( contextDeclaration )*
			{
			DebugLocation(24, 3);
			// ..\\..\\Model\\OCL\\Grammar\\OCLSyntax.g3:24:3: ( contextDeclaration )*
			try { DebugEnterSubRule(1);
			while (true)
			{
				int alt1=2;
				try { DebugEnterDecision(1, false);
				int LA1_0 = input.LA(1);

				if ((LA1_0==101))
				{
					alt1 = 1;
				}


				} finally { DebugExitDecision(1); }
				switch ( alt1 )
				{
				case 1:
					DebugEnterAlt(1);
					// ..\\..\\Model\\OCL\\Grammar\\OCLSyntax.g3:24:3: contextDeclaration
					{
					DebugLocation(24, 3);
					PushFollow(Follow._contextDeclaration_in_contextDeclarationList152);
					contextDeclaration1=contextDeclaration();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) stream_contextDeclaration.Add(contextDeclaration1.Tree);

					}
					break;

				default:
					goto loop1;
				}
			}

			loop1:
				;

			} finally { DebugExitSubRule(1); }



			{
			// AST REWRITE
			// elements: contextDeclaration
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 24:23: -> ^( CONDITION ( contextDeclaration )* )
			{
				DebugLocation(24, 26);
				// ..\\..\\Model\\OCL\\Grammar\\OCLSyntax.g3:24:26: ^( CONDITION ( contextDeclaration )* )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(24, 28);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(CONDITION, "CONDITION"), root_1);

				DebugLocation(24, 38);
				// ..\\..\\Model\\OCL\\Grammar\\OCLSyntax.g3:24:38: ( contextDeclaration )*
				while ( stream_contextDeclaration.HasNext )
				{
					DebugLocation(24, 38);
					adaptor.AddChild(root_1, stream_contextDeclaration.NextTree());

				}
				stream_contextDeclaration.Reset();

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("contextDeclarationList", 1);
			LeaveRule("contextDeclarationList", 1);
			LeaveRule_contextDeclarationList();
		}
		DebugLocation(25, 1);
		} finally { DebugExitRule(GrammarFileName, "contextDeclarationList"); }
		return retval;

	}
	// $ANTLR end "contextDeclarationList"

	public sealed partial class contextDeclaration_return : ParserRuleReturnScope<CommonToken>, IAstRuleReturnScope<object>, IAstRuleReturnScope
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public contextDeclaration_return(OCLSyntaxParser grammar) {OnCreated(grammar);}
		partial void OnCreated(OCLSyntaxParser grammar);
	}

	partial void EnterRule_contextDeclaration();
	partial void LeaveRule_contextDeclaration();

	// $ANTLR start "contextDeclaration"
	// ..\\..\\Model\\OCL\\Grammar\\OCLSyntax.g3:28:1: public contextDeclaration : ( propertyContextDecl | classifierContextDecl | operationContextDecl );
	[GrammarRule("contextDeclaration")]
	public OCLSyntaxParser.contextDeclaration_return contextDeclaration()
	{
		EnterRule_contextDeclaration();
		EnterRule("contextDeclaration", 2);
		TraceIn("contextDeclaration", 2);
		OCLSyntaxParser.contextDeclaration_return retval = new OCLSyntaxParser.contextDeclaration_return(this);
		retval.Start = (CommonToken)input.LT(1);

		object root_0 = default(object);

		OCLSyntaxParser.propertyContextDecl_return propertyContextDecl2 = default(OCLSyntaxParser.propertyContextDecl_return);
		OCLSyntaxParser.classifierContextDecl_return classifierContextDecl3 = default(OCLSyntaxParser.classifierContextDecl_return);
		OCLSyntaxParser.operationContextDecl_return operationContextDecl4 = default(OCLSyntaxParser.operationContextDecl_return);


		try { DebugEnterRule(GrammarFileName, "contextDeclaration");
		DebugLocation(28, 1);
		try
		{
			// ..\\..\\Model\\OCL\\Grammar\\OCLSyntax.g3:29:2: ( propertyContextDecl | classifierContextDecl | operationContextDecl )
			int alt2=3;
			try { DebugEnterDecision(2, false);
			try
			{
				alt2 = dfa2.Predict(input);
			}
			catch (NoViableAltException nvae)
			{
				DebugRecognitionException(nvae);
				throw;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// ..\\..\\Model\\OCL\\Grammar\\OCLSyntax.g3:29:3: propertyContextDecl
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(29, 3);
				PushFollow(Follow._propertyContextDecl_in_contextDeclaration175);
				propertyContextDecl2=propertyContextDecl();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, propertyContextDecl2.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// ..\\..\\Model\\OCL\\Grammar\\OCLSyntax.g3:30:3: classifierContextDecl
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(30, 3);
				PushFollow(Follow._classifierContextDecl_in_contextDeclaration179);
				classifierContextDecl3=classifierContextDecl();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, classifierContextDecl3.Tree);

				}
				break;
			case 3:
				DebugEnterAlt(3);
				// ..\\..\\Model\\OCL\\Grammar\\OCLSyntax.g3:31:3: operationContextDecl
				{
				root_0 = (object)adaptor.Nil();

				DebugLocation(31, 3);
				PushFollow(Follow._operationContextDecl_in_contextDeclaration183);
				operationContextDecl4=operationContextDecl();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, operationContextDecl4.Tree);

				}
				break;

			}
			retval.Stop = (CommonToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
		retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("contextDeclaration", 2);
			LeaveRule("contextDeclaration", 2);
			LeaveRule_contextDeclaration();
		}
		DebugLocation(32, 1);
		} finally { DebugExitRule(GrammarFileName, "contextDeclaration"); }
		return retval;

	}
	// $ANTLR end "contextDeclaration"

	private sealed partial class propertyContextDecl_return : ParserRuleReturnScope<CommonToken>, IAstRuleReturnScope<object>, IAstRuleReturnScope
	{
		private object _tree;
		public object Tree { get { return _tree; } set { _tree = value; } }
		object IAstRuleReturnScope.Tree { get { return Tree; } }
		public propertyContextDecl_return(OCLSyntaxParser grammar) {OnCreated(grammar);}
		partial void OnCreated(OCLSyntaxParser grammar);
	}

	partial void EnterRule_propertyContextDecl();
	partial void LeaveRule_propertyContextDecl();

	// $ANTLR start "propertyContextDecl"
